cabal-version: 2.4
name:
  bytestring-substring
version:
  0.1
synopsis:
  See README for more info
description:
  See README for more info
homepage:
  https://github.com/chessai/bytestring-substring
bug-reports:
  https://github.com/chessai/bytestring-substring/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Andrew Martin
maintainer:
  Andrew Martin <chessai1996@gmail.com>
copyright:
  © 2019 Andrew Martin
category:
  Data, Parsing
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    BytestringSubstring
  build-depends:
    , base >= 4.10.1.0 && < 4.13
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/bytestring-substring.git
